// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render color 1`] = `
<span
  class="wp-components-tag css-1c24az3"
  data-g2-c16t="true"
  data-g2-component="Tag"
>
  <span
    class="wp-components-truncate wp-components-text css-1smtimq"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</span>
`;

exports[`props should render correctly 1`] = `
<span
  class="wp-components-tag css-p3p88m"
  data-g2-c16t="true"
  data-g2-component="Tag"
>
  <span
    class="wp-components-truncate wp-components-text css-1smtimq"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</span>
`;

exports[`props should render display 1`] = `
<span
  class="wp-components-tag css-mubtdf"
  data-g2-c16t="true"
  data-g2-component="Tag"
>
  <span
    class="wp-components-truncate wp-components-text css-1smtimq"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</span>
`;

exports[`props should render href 1`] = `
<a
  class="wp-components-tag css-p3p88m"
  data-g2-c16t="true"
  data-g2-component="Tag"
  href="#"
>
  <span
    class="wp-components-truncate wp-components-text css-1smtimq"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</a>
`;

exports[`props should render onRemove 1`] = `
<span
  class="wp-components-tag css-p3p88m"
  data-g2-c16t="true"
  data-g2-component="Tag"
>
  <span
    class="wp-components-truncate wp-components-text css-1smtimq"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</span>
`;

exports[`props should render removeButtonText 1`] = `
<span
  class="wp-components-tag css-p3p88m"
  data-g2-c16t="true"
  data-g2-component="Tag"
>
  <span
    class="wp-components-truncate wp-components-text css-1smtimq"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
  <div
    class="css-1h6q7sj"
    data-g2-component="TagRemoveButtonWrapper"
  >
    <button
      aria-busy="false"
      aria-label="Remove"
      class="css-1czjvki"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="TagRemoveButton"
      data-icon="true"
      title="Remove"
      type="button"
    >
      <span
        class="wp-components-view wp-components-flex css-1gjqylm"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item css-kq9hj8"
          data-g2-c16t="true"
          data-g2-component="ButtonIcon"
        >
          <div
            class="wp-components-icon css-19gn8qe"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="12"
              size="12"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </div>
        </span>
      </span>
      <span
        class="wp-components-elevation css-1l26w1c"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</span>
`;
